# spotify_forecast_trigger

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
lambda/: index.py
